--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,10 @@
 {
   "name": "server",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
-    "main-server": "node src/mainServer.js",
-    "peer-server": "node src/peerServer.js",
-    "signaling-server": "node src/signalingServer.js",
-    "main-server-dev": "nodemon src/mainServer.js",
-    "peer-server-dev": "nodemon src/peerServer.js",
-    "signaling-server-dev": "nodemon src/signalingServer.js",
-    "servers-dev": "concurrently \"npm run dev-main-server\" \"npm run dev-peer-server\" \"npm run dev-signaling-server\"",
-    "servers-start": "concurrently \"npm run main-server\" \"npm run peer-server\" \"npm run signaling-server\""
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -18,7 +13,6 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.1",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
