Fix gradient & other bugs

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -21,5 +21,11 @@
 	"plugins": [
 		"react"
 	],
-	"parser": "babel-eslint"
+	"parser": "babel-eslint",
+	"rules": {
+		"jsx-quotes": [
+			1,
+			"prefer-single"
+		]
+	}
 }
