--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "start:server": "cd server; yarn start",
     "client:build": "cd client; yarn build",
     "start": "yarn client:build && yarn start:server"
+  },
+  "dependencies": {
+    "js-base64": "^2.5.1"
   }
 }
